--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,7 +62,7 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
 
     implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.compose.material3:material3:1.0.0-alpha09'
+    implementation 'androidx.compose.material3:material3:1.0.1'
 
     implementation 'com.google.accompanist:accompanist-systemuicontroller:0.27.0'
 }
